--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,28 @@
+.header {
+    color: teal;
+    text-align: center;
+    margin-top: 100px;
+}
+
+a {
+    text-decoration: none;
+    color: aliceblue;
+}
+
+.paragraph {
+    color: red;
+}
+
+.mon-apli {
+    width: 100%;
+}
+
+
 #cart {
 display: grid;
 grid-template-columns: 1fr 1fr 1fr;
 grid-gap: 30px;
-margin: 200px auto;
+margin: 100px auto;
 background-color: teal;
 border-radius: 25px;
 padding: 20px ;
@@ -10,6 +30,27 @@ padding: 20px ;
 }
 
 img {
-    width:300px;
-    height: auto;
+    width:100%;
+    height:auto;
+    border-radius: 25px;
+    max-width: 100%;
+    min-width: 60%;
 }
+
+.title {
+text-align: center;
+}
+
+@media (max-width: 375px)  {
+    #cart {
+        grid-template-columns: 1fr;
+        width: 100%;
+        padding: 0;
+        text-align: center;
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+    }
+ 
+} 
+    
